--- a/Sinitsyna/appsettings.json
+++ b/Sinitsyna/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(c MS SQL); Database=P3; Trusted_Connection=yes; TrustServerCertificate=yes"
+    "DefaultConnection": "Server=IDEAPADPRO-5-14;Database=Soulshine;Trusted_Connection=yes;TrustServerCertificate=yes"
   }
 }
