--- a/Sinitsyna/appsettings.json
+++ b/Sinitsyna/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IDEAPADPRO-5-14;Database=Soulshine;Trusted_Connection=yes;TrustServerCertificate=yes"
+    "DefaultConnection": "Server=DESKTOP-8OSNE5B\\SQLEXPRESS;Database=Soulshine;Trusted_Connection=yes;TrustServerCertificate=yes"
   }
 }
